# mibudge

./: .drone.yml  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CNAME  Dockerfile  LICENSE  Make.rules  Makefile  README.md  README.rst  docker-compose.yml  docker-local.yml  local.yml  manage.py  package-lock.json  package.json  production.yml  pyproject.toml  setup.cfg  t.txt  tox.ini
.envs/.local/: .postgres
.github/workflows/: ci.yml
app/: conftest.py  manage.py  utils.py
app/common/: invitation.py  locks.py  tokens.py
app/config/: api_router.py  asgi.py  celery_app.py  pagination.py  settings.py  urls.py  views.py  wsgi.py
app/mibudge/moneypools/: models.py  signals.py  views.py
app/mibudge/templates/: base.html
app/mibudge/users/: admin.py  views.py
app/moneypools/: admin.py  apps.py  description_utils.py  invitation_urls.py  invitation_views.py  models.py  notification_kinds.py  permissions.py  signals.py  tasks.py
app/moneypools/api/: filters.py  serializers.py  views.py
app/moneypools/migrations/: 0001_initial.py  0002_initial.py  0002_remove_transaction_budget_and_more.py  0003_alter_budget_target_date.py  0004_alter_bankaccount_account_number.py  0005_bank_default_currency_bankaccount_currency_and_more.py  0006_add_linked_transaction_to_transaction.py  0007_restrict_currency_choices.py  0008_alter_transaction_transaction_type.py  0009_alter_bankaccount_account_number.py  0010_alter_transaction_transaction_type.py  0011_alter_bankaccount_account_number.py  0012_alter_bank_routing_number.py  0013_bankaccount_link_aliases.py  0014_budget_complete_alter_budget_budget_type.py  0015_internaltransaction_internal_transaction_src_dst_different.py  0016_budget_funding_amount_budget_funding_amount_currency.py  0017_create_missing_fillup_goal_budgets.py  0018_alter_budget_fillup_goal.py  0019_fix_running_balances.py  0020_add_transaction_posted_date.py  0021_rederive_transaction_dates.py  0022_transaction_posted_date_non_null.py  0023_add_funding_fields.py  0024_seed_funding_system_user.py  0025_internaltransaction_effective_date.py  0026_rename_recurrance_schedule.py  0027_funding_redesign_schema.py  0028_funding_redesign_data.py  0029_transaction_bank_transaction_id.py  0030_alter_internaltransaction_effective_date.py  0031_funding_event_occurrence.py  0032_bankaccount_auto_funding_enabled.py  0033_bankaccountinvitation.py  0034_bankaccountinvitation_last_sent_at_and_more.py
app/moneypools/service/: __init__.py  bank_account.py  budget.py  funding.py  funding_strategy.py  internal_transaction.py  invitation.py  linking.py  schedules.py  shared.py  sync_scrape.py  transaction.py  transaction_allocation.py
app/moneypools/tests/: factories.py
app/notifications/: README.md  admin.py  apps.py  models.py  registry.py  senders.py  service.py  tasks.py
app/notifications/channels/: base.py  email.py
app/notifications/migrations/: 0001_initial.py  0002_notification_sender_id.py  0003_remove_notification_sender_id.py  0004_notificationpreference_delivery_mode.py  0005_channelpreference_default_daily_morning.py
app/scripts/: generate_api_docs.py  start_app.sh  start_celerybeat.sh  start_celeryworker.sh  start_dev.sh  start_flower.sh  start_gunicorn.sh
app/templates/: 404.html  500.html  base.html
app/templates/account/: base.html
app/templates/notifications/: email_digest_body.en-us.html  email_digest_body.en-us.txt  email_digest_subject.en-us.txt  email_standalone_body.en-us.html
app/templates/pages/: home.html
app/templates/spa/: shell.html  token_handoff.html
app/tests/: conftest.py
app/tests/common/: test_locks.py
app/tests/config/: test_urls.py
app/tests/moneypools/: conftest.py  factories.py  test_api.py  test_description_utils.py  test_factories.py  test_funding.py  test_funding_strategy.py  test_invitations.py  test_linking.py  test_models.py  test_recompute_running_balances.py  test_service.py  test_sync_scrape.py  test_verify_balances.py
app/tests/notifications/: conftest.py  factories.py  test_drf_views.py  test_email_channel.py  test_senders.py  test_service.py  test_tasks.py
app/tests/users/: conftest.py  factories.py  test_admin.py  test_allauth_views.py  test_drf_urls.py  test_drf_views.py  test_email_change.py  test_forms.py  test_invitation_views.py  test_invitations.py  test_jwt_views.py  test_models.py  test_signals.py  test_tasks.py  test_urls.py  test_views.py
app/users/: adapters.py  admin.py  apps.py  backends.py  email_change.py  forms.py  invitation.py  invitation_views.py  models.py  notification_kinds.py  onboarding.py  serializers.py  signals.py  urls.py  views.py
app/users/api/: views.py
app/users/migrations/: 0001_initial.py  0002_add_default_bank_account.py  0003_user_timezone.py  0004_backfill_email_placeholders.py  0007_userinvitation.py  (+2 more)
config/: api_router.py  asgi.py  celery_app.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
deploy/: docker-compose.prod.yml
deployment/: docker-compose.prod.yml  docker-compose.yml  dot-env.dev  dot-env.docker-dev  dot-env.example  nginx.conf  supervisord.conf
docs/: UI_SPEC.md  api.md  conf.py  funding.md  howto.rst  importers.md  index.rst  make.bat  management-commands.md  openapi.yaml  users.rst
frontend/: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
importers/: README.md  __main__.py  backfill_budget.py  client.py  import_bofa_live.py  import_bofa_saved.py  import_transactions.py  theme.py
importers/parsers/: bofa_csv.py  common.py  ofx.py
importers/tests/: conftest.py  factories.py  test_client.py  test_factories.py  test_import.py  test_import_bofa_live.py  test_parsers.py
mibudge/: conftest.py
mibudge/moneypools/: apps.py  models.py  signals.py  views.py
mibudge/templates/: base.html
mibudge/users/: admin.py  apps.py  models.py  urls.py  views.py
moneypools/: apps.py  models.py  urls.py
requirements/: base.in  base.txt  local.in  local.txt  production.in  production.txt
(+171 files in other folders)
