[project]
name = "mibudge"
version = "0.1.0"
description = "Personal budgeting service inspired by Simple Bank"
requires-python = ">=3.13"
dependencies = [
    # Core
    "django>=5.2,<6",
    "djangorestframework",
    "django-environ",
    "django-extensions",
    "django-filter",
    "django-model-utils",
    "django-cors-headers",
    # Auth
    "djangorestframework-simplejwt",
    "django-allauth",
    "django-guardian",
    "argon2-cffi",
    # Encryption
    "django-fernet-encrypted-fields",
    # Money & scheduling
    "django-money",
    "django-recurrence",
    # Celery
    "celery",
    "django-celery-beat",
    "flower",
    # Cache & broker
    "redis[hiredis]",
    "django-redis",
    # Database
    "psycopg[binary]",
    # Static files & media
    "whitenoise",
    "django-vite",
    "Pillow",
    # Server
    "uvicorn[standard]",
    # Service readiness
    "wait-for-it",
    # Utilities
    "python-slugify",
    "python-dateutil",
    "markdown",
    "PyYAML",
    "Pygments",
    "rich",
    "drf-spectacular>=0.29.0",
    "httpx>=0.28.1",
    "ofxparse>=0.21",
    "click>=8.3.1",
    "python-dotenv>=1.2.2",
    "hvac>=2.4.0",
    "django-settings-export>=1.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app/moneypools", "app/users"]

[dependency-groups]
dev = [
    # Testing
    "pytest",
    "pytest-django",
    "pytest-factoryboy",
    "pytest-sugar",
    "pytest-cov",
    "factory-boy",
    "faker",
    "fakeredis",
    "pytest-mock",
    "freezegun",
    # Type checking
    "django-stubs[compatible-mypy]>=5.2,<6",
    # Linting & formatting
    "ruff",
    "pre-commit",
    # Debugging
    "ipdb",
    "ipython",
    "werkzeug",
    # Utilities
    "django-debug-toolbar",
    "pyopenssl>=26.0.0",
]

########################################################################
# Tool configurations
########################################################################

[tool.ruff]
target-version = "py313"
line-length = 80
exclude = ["**/migrations/*.py"]

[tool.ruff.lint]
select = ["E", "W", "F", "B", "C4", "UP", "I"]
ignore = ["E501", "B008", "B905"]

[tool.ruff.lint.isort]
known-first-party = ["moneypools", "users", "config", "importers"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
exclude = ['__pycache__', 'migrations', '.venv', 'venv*']
plugins = ["mypy_django_plugin.main"]
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
# django-manager-missing is a known false-positive with djmoney (MoneyManager)
disable_error_code = ["django-manager-missing"]

[tool.django-stubs]
django_settings_module = "config.settings"
strict_settings = false

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
addopts = "--durations=10 --durations-min=0.1"
testpaths = ["app/tests", "importers/tests"]
pythonpath = ["app", "."]
markers = [
    "smoke: marks tests as smoke",
    "integration",
]
filterwarnings = [
    # WhiteNoise fires this on every request when staticfiles/ doesn't exist
    # locally (it's created by collectstatic, not present in the source tree).
    "ignore:No directory at.*staticfiles:UserWarning",
    # ofxparse calls BeautifulSoup's deprecated findAll (renamed to find_all
    # in bs4 4.0). Upstream fix has not shipped.
    "ignore:Call to deprecated method findAll.*:DeprecationWarning:ofxparse.ofxparse",
]
